--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,14 @@
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_calculator">Calculator</string>
     <string name="menu_browser">Browser</string>
-    <string name="nav_player">Music</string>
+    <string name="menu_player">Music</string>
+    <string name="menu_sensor">Sensors</string>
+    <string name="menu_camera">Camera</string>
+    <string name="menu_audio">Recorder</string>
+    <string name="start_record_audio">Start recording</string>
+    <string name="stop_record_audio">Stop recording</string>
+    <string name="make_photo_button">Make a photo</string>
+    <string name="save_photo_button">Save this photo</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
