--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,10 +16,18 @@
     <string name="menu_sensor">Sensors</string>
     <string name="menu_camera">Camera</string>
     <string name="menu_audio">Recorder</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_story">Stories</string>
     <string name="start_record_audio">Start recording</string>
     <string name="stop_record_audio">Stop recording</string>
     <string name="make_photo_button">Make a photo</string>
     <string name="save_photo_button">Save this photo</string>
+    <string name="save_info_button">Save</string>
+    <string name="stories_button">Float action button</string>
+    <string name="name_hint">Name</string>
+    <string name="age_hint">Age</string>
+    <string name="story_number_hint">Story Number</string>
+    <string name="occupation_hint">Job/Occupation</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
