--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,11 +27,12 @@
     <string name="stories_button">Float action button</string>
     <string name="name_hint">Name</string>
     <string name="age_hint">Age</string>
+    <string name="time_hint">Time</string>
     <string name="story_number_hint">Story Number</string>
+    <string name="tm_times_number_hint">Time Number</string>
     <string name="occupation_hint">Job/Occupation</string>
     <string name="time">Get Time</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">Welcome to MireaProject</string>
 
     <string name="label_email_password">Email/Password Authentication</string>
     <string name="desc_email_password">Use an email and password to authenticate with Firebase.</string>
@@ -52,7 +53,6 @@
     <string name="hint_password">password</string>
     <string name="desc_firebase_lockup">Firebase</string>
     <string name="title_activity_login">LoginActivity</string>
-    <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
